# final-project-stella-etoile

./: .gitignore  README.md  contact.txt  menace.cabal  proposal.txt  run_menace_stats.py
app/: Main.hs
duel_results/combined_g10000_s1_symduel/: drawrate_matrix.csv  o_win_or_draw_matrix.csv  o_winrate_matrix.csv  x_win_or_draw_matrix.csv  x_winrate_matrix.csv
duel_results/nosym_only_g10000_s1/: drawrate_matrix.csv  o_win_or_draw_matrix.csv  o_winrate_matrix.csv  x_win_or_draw_matrix.csv  x_winrate_matrix.csv
duel_results/sym_only_g10000_s1/: drawrate_matrix.csv  o_win_or_draw_matrix.csv  o_winrate_matrix.csv  x_win_or_draw_matrix.csv  x_winrate_matrix.csv
src/Menace/: Board.hs  Engine.hs  Persist.hs  Symmetry.hs  Types.hs
trained/: menace-100-sym.json  menace-100.json  menace-1000-sym.json  menace-1000.json  menace-10000-sym.json  menace-10000.json  menace-500-sym.json  menace-500.json  menace-50000-sym.json  menace-50000.json
